Basic cube scene

--- a/static/styles/index.scss
+++ b/static/styles/index.scss
@@ -1,11 +1,6 @@
 @import '../../node_modules/bootstrap/scss/bootstrap.scss';
-@import './bar-charts.scss';
-@import './circle-charts.scss';
-@import './line-charts.scss';
-@import './pie-charts.scss';
-@import './force-charts.scss';
-@import './tree-charts.scss';
 
-.chart-container {
-  padding: 10px;
+canvas {
+  width: 100%;
+  height: 600px;
 }
